--- a/02-setup-and-testing-software/01-installing-vitest/index.html
+++ b/02-setup-and-testing-software/01-installing-vitest/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Natours | Exciting tours for adventurous people</title>
+    <title>JavaScrript Unit Testing</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png" />
     <link
       rel="stylesheet"
@@ -13,6 +13,5 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
-  <body>
-  </body>
+  <body></body>
 </html>
